deploy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  labels:
    app: mosquitto
spec:
  selector:
    matchLabels:
      app: mosquitto
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mosquitto
        tier: frontend
    spec:
      containers:
        - image: eclipse-mosquitto:2.0
          name: mosquitto
          ports:
            - containerPort: 8883
              name: mosquitto
            - containerPort: 9001
              name: mosquitto-ws
          volumeMounts:
            - name: mosquitto-persistent-storage
              mountPath: /mosquitto/data
            - name: mosquitto-config
              mountPath: /mosquitto/config/mosquitto.conf
              subPath: mosquitto.conf
            - name: mosquitto-password
              mountPath: /mosquitto/config/password.txt
              subPath: password.txt
            - mountPath: /mosquitto/certs/
              name: certs
      volumes:
        - name: mosquitto-persistent-storage
          persistentVolumeClaim:
            claimName: mq-pv-claim
        - name: mosquitto-config
          configMap:
            name: mosquitto-config
        - name: mosquitto-password
          configMap:
            name: mosquitto-password
        - name: certs
          secret:
            secretName: mosquitto-certs
