deploy/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  labels:
    app: mosquitto
spec:
  type: NodePort
  selector:
    app: mosquitto
    tier: frontend
  ports:
    - port: 8883
      nodePort: 31883
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-ws
  labels:
    app: mosquitto
spec:
  type: ClusterIP
  selector:
    app: mosquitto
  ports:
    - port: 9001
